# maos

./: .gitignore  .gitlab-ci.yml  AUTHORS  CITATION.cff  ChangeLog  Makefile.am  NEWS  README  README.md  SCAO_BASE.html  SCAO_LGS.html  SCAO_NGS.html  TODO  _form0.eps  _form0.ps  _formulas.aux  _formulas.dvi  _formulas.tex  accphi_8c.html  accphi_8c.js  ahst_8c.html  ahst_8c.js  ahst_8h.html  ahst_8h.js  algorithm.html  annotated.html  annotated.js  annotated_dup.js  aper_8h.html  aper_8h.js  atm_arm25p.html  atm_arm50p.html  atm_arm75p.html  atm_mk13n10p.html  atm_mk13n15p.html  atm_mk13n20p.html  atm_mk13n25p.html  atm_mk13n25p_old.html  atm_mk13n30p.html  atm_mk13n35p.html  (+3407 more)
config/: Makefile.am
config/maos/: README  aper_tmt.conf  atm_ORM25p.conf  atm_ORM50p.conf  atm_SPM50p.conf  atm_SPM75p.conf  atm_arm25p.conf  atm_arm75p.conf  atm_mk13n25p.conf  atm_mk13n25p_old.conf  atm_mk13n50p.conf  atm_mk13n50p_old.conf  atm_mk13n75p.conf  atm_mk25p.conf  atm_mk50p.conf  atm_mk75p.conf  atm_nfiraosgen.conf  atm_orm75p.conf  atm_scao.conf  atm_single.conf  atm_spm25p.conf  atm_srd.conf  atmr_single.conf  changes.conf  dbg.conf  default.conf  dither_lgstt.conf  dither_pydm.conf  dither_pytt.conf  dm_dual.conf  dm_none.conf  dm_single.conf  dm_triple.conf  evl_cir30.conf  evl_cir60.conf  evl_oa.conf  evl_sq17.conf  evl_sq34.conf  evl_sq60.conf  evl_x.conf  (+93 more)
config/skyc/: maos.conf  maos_test.conf  skyc.conf  skyc_ttf.conf  skyc_za0.conf  skyc_za15.conf  skyc_za30.conf  skyc_za45.conf  skyc_za50.conf  skyc_za55.conf  skyc_za57.5  skyc_za57.5.conf  skyc_za60.conf  skyc_za62.5.conf  skyc_za65.conf
cuda/: Makefile.am  Readme  accphi.cu  accphi.h  atm.cu  common.h  cubin.h  cuchol.cu  cucmat.cu  cucmat.h  cudata.cu  cudata.h  cumat.h  cumuv.cu  curmat.cu  curmat.h  cuwfs.cu  cuwfs.h  fdpcg.cu  fdpcg.h  fit.cu  fit.h  gpu.h  gpu_mvm.c  junk.cu  kernel.cu  kernel.h  moao.cu  moao.h  mvm.cu  mvm_daemon.cu  mvm_direct.cu  mvm_iwfs.cu  mvm_test.cu  mvm_trans.cu  mvmfull_iwfs.cu  mvmfull_pipe.cu  mvmfull_real.cu  new.cu  pcg.cu  (+29 more)
cuda/math/: Makefile.am  common.h  cublas.cu  cublas.h  cucmat.cu  cumath.h  curmat.cu  curmat.h  gpu_math.cu  gpu_math.h  kernel.cu  kernel.h  math.h  prop_map.cu  prop_map.h  types.cu  types.h  utils.cu  utils.h
cuda/obsolete/: cuwfs.cu  cuwfs.h
cuda/recon/: Makefile.am  fdpcg.cu  fdpcg.h  (+17 more)
lib/: Makefile.am  accphi.c  accphi.h  accphi_grid_do.c  amoeba.c  aolib.c  aos.h  bessel_mode.c  bessel_mode.h  bessik.c  bin.c  bin.h  blas.c  blas.h  cell.c  cell.h  cellarr.c  cellarr.h  chol.c  chol.h  cmat.c  cmat.h  cmat_extra.c  cmat_extra.h  cmath.c  cn2est.c  cn2est.h  comb.c  comb.h  common.h  csp.c  csp.h  cure.c  cure.h  defs.h  dmat.c  dmat.h  dmath.c  draw.c  draw.h  (+109 more)
maos/: Makefile.am  ahst.c  ahst.h  aper.c  aper.h  cachedm.c  cn2est.c  cn2est.h  common.h  display.c  fdpcg.c  fdpcg.h  filter.c  genseotf.c  genseotf.h  main.c  maos.c  maos.h  moao.c  moao.h  mtch.c  mtch.h  mvm_client.c  mvm_client.h  parms.c  parms.h  perfevl.c  powfs.c  powfs.h  powfs_utils.c  powfs_utils.h  pywfs.c  pywfs.h  recon.c  recon.h  recon_fit.c  recon_geom.c  recon_lsr.c  recon_mvm.c  recon_mvst.c  (+35 more)
math/: Makefile.am  amoeba.c  bessik.c  blas.c  blas.h  cell.c  cell.h  cellarr.c  cellarr.h  chol.c  chol.h  cmat.c  cmath.c  cmath.h  defs.h  dmath.c  dmath.h  fft.c  fft.h  imat.c  imat.h  lmath.c  lmath.h  loc.c  loc.h  locbin.c  locbin.h  map.c  map.h  mat.c  mat.h  matbin.c  matbin.h  matcomp.c  mathdef.h  mathmisc.c  mathmisc.h  matmath.c  matmath.h  matmmap.c  (+20 more)
mex/: Makefile  Makefile.am  Makefile.full  Makefile.mex  act_extrap.c  aolib.c  aolib.h  aolibmex.c  aolibmex.h  calcenc.c  clrand.c  cn2est.c  compile.sh  crandcreate.c  crandn.c  crandp.c  genotfmex.c  interface.c  interface.h  io.c  io.h  kalman_sim_mex.c  makefile  maos.c  maos2mex.h  mk2dcov.c  mkcirmap.c  mkgmex.c  mkgmex.h  mkhmex.c  mkwmex.c  null.c  proj.c  proj.h  psd1d.c  read.c  sde_fit_mex.c  sde_kalman_mex.c  servo_optim_mex.c  servo_sim_mex.c  (+2 more)
skyc/: Makefile.am  aster.c  aster.h  convert_psf.c  genpistat.c  genpistat.h  genstars.c  genstars.h  mtch.c  mtch.h  nafocus.c  nafocus.h  parms.c  parms.h  photon.c  photon.h  physim.c  physim.h  powfs.c  powfs.h  servo.c  servo.h  setup_aster.c  setup_aster.h  setup_parms.c  setup_powfs.c  setup_powfs.h  setup_star.c  setup_star.h  skyc.c  skyc.h  skysim.c  skysim.h  skysim_utils.c  skysim_utils.h  star.c  star.h  types.h  unwrap.c  utils.c  (+1 more)
sys/: Makefile.am  bin.c  bin.h  common.h  daemonize.c  daemonize.h  dlist.c  dlist.h  hashlittle.c  hashlittle.h  mem.c  mem.h  memdbg.c  misc.c  misc.h  path.c  path.h  process.c  process.h  process_apple.c  process_bsd.c  process_cygwin.c  process_linux.c  readstr.c  readstr.h  scheduler.h  scheduler_client.c  scheduler_client.h  scheduler_server.c  scheduler_server.h  sha1.c  sha1.h  sock.c  sock.h  sockio.c  sockio.h  sys.h  thread.c  thread.h  thread_pool.c  (+3 more)
test/: MUV.m  Makefile.am  cmocka_blas.c  cmocka_fits.c  cmocka_locfft.c  cmocka_mat.c  cmocka_matmath.c  cmocka_psd.c  cmocka_rayleigh.c  cmocka_readstr.c  cmocka_threadpool.c  convert_psfout.c  test_accphi.c  test_atm.c  test_atmpsd.m  test_cg.m  test_chol.c  test_cmat2.c  test_draw.c  test_eigs.c  test_fd.c  test_fft.c  test_fits.c  test_fractal.c  test_fractal.m  test_gpu.c  test_loc.c  test_mat.c  test_minsearch.c  test_plot.c  test_proj.c  test_rand.c  test_recon_fit.m  test_recon_tomo.m  test_sanea.c  test_sim_fit.m  test_sparse.c  test_svdlas2.c  test_tomo.c  test_trp.m
tools/: .#monitor.c  Makefile.am  bin2fits.c  calcenc.c  cov2psf.c  demo.c  draw_utils.js  drawbin.c  drawdaemon.c  drawdaemon.h  drawdaemon.js  drawdaemon_draw.c  drawdaemon_gui.c  drawdaemon_io.c  drawres.c  ethtest.c  ethtest_standalone.c  gpu_mvm.c  gtk3-css.h  gtkcellrendererprogressnew.c  gtkcellrendererprogressnew.h  icon-cancel.h  icon-clear.h  icon-connect.h  icon-draw.h  icon-draw.icns  icon-error.h  icon-failed.h  icon-finished.h  icon-monitor.h  icon-monitor.icns  icon-optics.h  icon-play.h  icon-running.h  icon-save.h  icon-skip.h  icon-waiting.h  load.c  memdbg.c  mk2dcov.c  (+38 more)
(+1764 files in other folders)
